Fix: Robust hiding of header logo on mobile

--- a/style.css
+++ b/style.css
@@ -651,7 +651,7 @@ h4 {
         gap: 15px;
     }
 
-    .header-content>a {
+    .header .logo {
         display: none;
     }
 
